py: Lo Shu Magic Square

--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -168,6 +168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `for item in list`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -183,6 +190,74 @@
    "source": [
     "for i in \"abc\":\n",
     "\tprint(i,end=\" \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "\n",
+      "Java\n",
+      "C\n",
+      "C++\n",
+      "Kotlin\n",
+      "TypeScript\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "programming_lan = [\"Java\", \"C\", \"C++\", \"Kotlin\", \"TypeScript\"]\n",
+    "\n",
+    "# List Membership Test\n",
+    "v = \"C\" in programming_lan\n",
+    "print(v)\n",
+    "print()\n",
+    "\n",
+    "# looping\n",
+    "for l in programming_lan:\n",
+    "    print(l)\n",
+    "\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `in range(start, end, step)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 10)\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[2, 3, 4, 5, 6, 7]\n",
+      "[2, 5, 8, 11, 14, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(range(10))\n",
+    "\n",
+    "print(list(range(10)))\n",
+    "\n",
+    "print(list(range(2, 8)))\n",
+    "\n",
+    "print(list(range(2, 20, 3)))\n"
    ]
   },
   {
@@ -204,69 +279,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "\n",
-      "Java\n",
-      "C\n",
-      "C++\n",
-      "Kotlin\n",
-      "TypeScript\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "programming_lan= [\"Java\",\"C\",\"C++\",\"Kotlin\",\"TypeScript\"]\n",
-    "\n",
-    "# List Membership Test\n",
-    "v = \"C\" in programming_lan\n",
-    "print(v)\n",
-    "print()\n",
-    "\n",
-    "# looping\n",
-    "for l in programming_lan:\n",
-    "    print(l)\n",
-    "\n",
-    "print()\n",
-    "\n"
+    "### using indexing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Above code doesn't give index of the element. It gives the element itself. Below are the ways to get the index of the element.**"
+    "Above code doesn't give index of the element. It gives the element itself. Below are the ways to get the index of the element."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `for i in range(len(list))` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: Java\n",
-      "1: C\n",
-      "2: C++\n",
-      "3: Kotlin\n",
-      "4: TypeScript\n",
-      "\n",
-      "(0, 'Java')\n",
-      "(1, 'C')\n",
-      "(2, 'C++')\n",
-      "(3, 'Kotlin')\n",
-      "(4, 'TypeScript')\n",
-      "\n",
       "0: Java\n",
       "1: C\n",
       "2: C++\n",
@@ -283,6 +324,41 @@
     "    print(f\"{i}: {programming_lan[i]}\")\n",
     "    \n",
     "print()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `for i,value in enumerate(list)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'Java')\n",
+      "(1, 'C')\n",
+      "(2, 'C++')\n",
+      "(3, 'Kotlin')\n",
+      "(4, 'TypeScript')\n",
+      "\n",
+      "0: Java\n",
+      "1: C\n",
+      "2: C++\n",
+      "3: Kotlin\n",
+      "4: TypeScript\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# looping with enumerate()\n",
     "for lan in enumerate(programming_lan):\n",
@@ -498,25 +574,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating 2D list"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
       "[[0, 0], [0, 0]]\n"
      ]
     }
    ],
    "source": [
-    "print([[0]*2]*2)"
+    "list_2d = [ [1,2,3],\n",
+    "\t\t\t[4,5,6],\n",
+    "\t\t\t[7,8,9]]\n",
+    "print(list_2d)\n",
+    "\n",
+    "print([[0]*2]*2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing 2D list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -530,19 +627,20 @@
     }
    ],
    "source": [
-    "list_2d = [ [1,2,3],\n",
-    "\t\t\t[4,5,6],\n",
-    "\t\t\t[7,8,9]]\n",
-    "print(list_2d)\n",
-    "\n",
-    "# accessing element in 2D list\n",
     "print(list_2d[1])\n",
-    "print(list_2d[1][0])\n"
+    "print(list_2d[1][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterating 2D list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -562,9 +660,16 @@
     }
    ],
    "source": [
-    "for i,row in enumerate(list_2d):\n",
-    "\tfor j,col in enumerate(row):\n",
-    "\t\tprint(f\"{i},{j}: {col}\")"
+    "for i,line in enumerate(list_2d):\n",
+    "\tfor j,value in enumerate(line):\n",
+    "\t\tprint(f\"{i},{j}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operations on 2D list"
    ]
   },
   {
@@ -1385,6 +1490,161 @@
     "\n",
     "lst[0]=key\n",
     "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EX: 🌟Lo Shu Magic Square "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Lo Shu Magic Square is a grid with 3 rows and 3 columns.The Lo Shu Magic Square has the following properties:\n",
+    "\n",
+    "1. The grid contains the numbers 1 through 9 exactly.\n",
+    "2. The sum of each row, each column, and each diagonal all add up to the same number.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"img/phpEUzytT.png\" alt=\"phpEUzytT.png\" width=\"300px\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square is Magic and is Lo Shu\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array dimensions\n",
+    "N = 3\n",
+    "\n",
+    "# Directions\n",
+    "HORIZONTAL = \"HORIZONTAL\"\n",
+    "VERTICAL = \"VERTICAL\"\n",
+    "DIAGONAL = \"DIAGONAL\"\n",
+    "\n",
+    "# use this array to bypass user input when testing\n",
+    "SQUARE = [[4, 9, 2],\n",
+    "          [3, 5, 7],\n",
+    "          [8, 1, 6]]\n",
+    "\n",
+    "\n",
+    "# Horizontal, Vertical and Diagonal summing\n",
+    "def universal_sum(square, direction):\n",
+    "    diagonal_1 = 0\n",
+    "    diagonal_2 = 0\n",
+    "    row_sum = 0\n",
+    "    u_sum = []\n",
+    "    for x in range(N):\n",
+    "        if direction == DIAGONAL:\n",
+    "            diagonal_1 += square[x][x]\n",
+    "            diagonal_2 += square[x][N - (x + 1)]\n",
+    "        for y in range(N):\n",
+    "            if direction == HORIZONTAL:\n",
+    "                row_sum += square[x][y]\n",
+    "            elif direction == VERTICAL:\n",
+    "                row_sum += square[y][x]\n",
+    "        u_sum.append(row_sum)\n",
+    "        row_sum = 0\n",
+    "    if direction == DIAGONAL:\n",
+    "        return [diagonal_1, diagonal_2]\n",
+    "    return u_sum\n",
+    "\n",
+    "\n",
+    "# check if sums are equal in horizontal, vertical\n",
+    "# and diagonal arrays\n",
+    "def check_equal(iterator):\n",
+    "    return len(set(iterator)) <= 1\n",
+    "\n",
+    "\n",
+    "# method to find duplicates for lo shu condition\n",
+    "def find_repeat(square):\n",
+    "    seen = set()\n",
+    "    for x in range(N):\n",
+    "        for y in range(N):\n",
+    "            if square[x][y] in seen:\n",
+    "                return 0\n",
+    "            seen.add(square[x][y])\n",
+    "    return 1\n",
+    "\n",
+    "\n",
+    "# lo shu checks\n",
+    "def is_lo_shu(square):\n",
+    "    for row in square:\n",
+    "        for element in row:\n",
+    "            if element >= 10:\n",
+    "                return 0\n",
+    "\n",
+    "    if sum(universal_sum(square, HORIZONTAL)) == 45:\n",
+    "        if sum(universal_sum(square, VERTICAL)) == 45:\n",
+    "            if sum(universal_sum(square, DIAGONAL)) == 30:\n",
+    "                if find_repeat(square) == 1:\n",
+    "                    return 1\n",
+    "    return 0\n",
+    "\n",
+    "\n",
+    "# get user input and return 2d array\n",
+    "def getuserinput():\n",
+    "    square = []\n",
+    "    i = 1\n",
+    "    for x in range(N):\n",
+    "        row_list = []\n",
+    "        for y in range(N):\n",
+    "            print(\"Enter number\", i, \"[\", x, \"][\", y, \"]: \", end=\"\")\n",
+    "            row_list.append(int(input(), 10))\n",
+    "            i += 1\n",
+    "        square.append(row_list)\n",
+    "    return square\n",
+    "\n",
+    "\n",
+    "def check_square(square):\n",
+    "    if check_equal(universal_sum(square, HORIZONTAL)) and check_equal(universal_sum(square, VERTICAL)) and check_equal(\n",
+    "            universal_sum(square, DIAGONAL)):\n",
+    "        is_magic = 1\n",
+    "    else:\n",
+    "        is_magic = 0\n",
+    "\n",
+    "    if is_lo_shu(square):\n",
+    "        is_loshu = 1\n",
+    "    else:\n",
+    "        is_loshu = 0\n",
+    "\n",
+    "    if is_magic and is_loshu:\n",
+    "        print(\"Square is Magic and is Lo Shu\\n\")\n",
+    "        return\n",
+    "    elif is_magic and not is_loshu:\n",
+    "        print(\"Square is Magic, but not Lo Shu\\n\")\n",
+    "        return\n",
+    "    elif not is_magic:\n",
+    "        print(\"Square is not Magic\\n\")\n",
+    "        return\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    # while 1:\n",
+    "        # square = getuserinput()\n",
+    "        \n",
+    "        check_square(SQUARE)\n",
+    "        # repeat = input('Do you wish to enter a new square? (y/n)')\n",
+    "        # if \"n\" in repeat:\n",
+    "        #     break\n",
+    "    # print(\"Bye!\")\n",
+    "\n",
+    "\n",
+    "main()\n"
    ]
   },
   {
