py: 2D list input

--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -608,6 +608,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Taking Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the entries rowwise:\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "R = int(input(\"Enter the number of rows:\"))\n",
+    "C = int(input(\"Enter the number of columns:\"))\n",
+    "\n",
+    "matrix = []\n",
+    "print(\"Enter the entries rowwise:\")\n",
+    "\n",
+    "# For user input\n",
+    "for i in range(R):\t\t # A for loop for row entries\n",
+    "\ta = []\n",
+    "\tfor j in range(C):\t # A for loop for column entries\n",
+    "\t\ta.append(int(input()))\n",
+    "\tmatrix.append(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Enter the number of rows:2\n",
+    "Enter the number of columns:3\n",
+    "Enter the entries rowwise:\n",
+    "1\n",
+    "2\n",
+    "3\n",
+    "4\n",
+    "5\n",
+    "6\n",
+    "\n",
+    "1 2 3 \n",
+    "4 5 6 \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [3, 4]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# one-liner logic to take input for rows and columns\n",
+    "R = 2\n",
+    "C = 2\n",
+    "mat = [[int(input()) for x in range (C)] for y in range(R)]\n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Accessing 2D list"
    ]
   },
