--- a/Py/02flow_controll/py_controlflow.ipynb
+++ b/Py/02flow_controll/py_controlflow.ipynb
@@ -1,32 +1,150 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python385jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "### Chained Comparision"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# Flow Control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  \n",
+    "cd .\\Py\\02flow_controll\\ \n",
+    "jupyter nbconvert --to markdown py_controlflow.ipynb --output README.md\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Truthy and Falsy Values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "> - Values that evaluate to False are considered Falsy.\n",
+    "> - Values that evaluate to True are considered Truthy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Falsy Values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sequences and Collections:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Empty lists []\n",
+    "- Empty tuples ()\n",
+    "- Empty dictionaries {}\n",
+    "- Empty sets set()\n",
+    "= Empty strings \"\"\n",
+    "- Empty ranges range(0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Numbers\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Zero of any numeric type.\n",
+    "- Integer: 0\n",
+    "- Float: 0.0\n",
+    "- Complex: 0j\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Constants\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- None\n",
+    "- False\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Truthy Values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "> By default, an object is considered true.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Truthy values include:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Non-empty sequences or collections (lists, tuples, strings, dictionaries, sets).\n",
+    "- Numeric values that are not zero.\n",
+    "- True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chained Comparison"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,8 +152,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Enjoy your free time\n"
      ]
@@ -51,11 +169,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### ! -> not"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -63,8 +181,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Go swimming\n"
      ]
@@ -81,54 +199,13 @@
    ]
   },
   {
-   "source": [
-    "## Truthy and Falsy Values\n",
-    "> - Values that evaluate to False are considered Falsy.\n",
-    "> - Values that evaluate to True are considered Truthy.\n",
-    "\n",
-    "## Falsy Values\n",
-    "### Sequences and Collections:\n",
-    "\n",
-    "- Empty lists []\n",
-    "- Empty tuples ()\n",
-    "- Empty dictionaries {}\n",
-    "- Empty sets set()\n",
-    "= Empty strings \"\"\n",
-    "- Empty ranges range(0)\n",
-    "\n",
-    "### Numbers\n",
-    "\n",
-    "- Zero of any numeric type.\n",
-    "- Integer: 0\n",
-    "- Float: 0.0\n",
-    "- Complex: 0j\n",
-    "\n",
-    "### Constants\n",
-    "\n",
-    "- None\n",
-    "- False\n",
-    "\n",
-    "## Truthy Values\n",
-    "\n",
-    "> By default, an object is considered true.\n",
-    "\n",
-    "### Truthy values include:\n",
-    "\n",
-    "- Non-empty sequences or collections (lists, tuples, strings, dictionaries, sets).\n",
-    "- Numeric values that are not zero.\n",
-    "- True"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Are you the man with no name?\n"
      ]
@@ -143,11 +220,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# FOR"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -155,21 +232,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       ",;: ,;\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'9 233 372 036 854 775 807'"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -185,11 +262,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Continue"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -197,10 +274,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Buying List: milk\nBuying List: pasta\nBuying List: eggs\nBuying List: bread\n"
+      "Buying List: milk\n",
+      "Buying List: pasta\n",
+      "Buying List: eggs\n",
+      "Buying List: bread\n"
      ]
     }
    ],
@@ -213,11 +293,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### break"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -225,8 +305,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Item found at postiton 3\n"
      ]
@@ -249,25 +329,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# WHILE"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Game Over\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "while 1:\n",
+    "\tstop = input(\"Press 'q' to quit: \")\n",
+    "\tif stop == 'q':\n",
+    "\t\tbreak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "available = [\"north\",\"south\",\"east\",\"west\"]\n",
     "chosen = \"\"\n",
@@ -282,11 +366,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Guessing Game"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -294,8 +378,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "8\n",
       "Please guess number between 1 and 8\n",
@@ -328,11 +412,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Hi Lo Game"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -353,5 +437,30 @@
     "    high_low = input (f\"My guess is {}.\")"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "8cdb09b0bc1c395d296938b19fe7764d972a7ceeffba4d3ad7ff6a3771581719"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
