--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -78,6 +78,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 🚀List Input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiline Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating an empty list\n",
+    "lst = []\n",
+    "\n",
+    "# number of elements as input\n",
+    "n = int(input(\"Enter number of elements : \"))\n",
+    "\n",
+    "# iterating till the range\n",
+    "for i in range(0, n):\n",
+    "    ele = int(input(f\"element - {i+1} : \"))\n",
+    "\n",
+    "    lst.append(ele)  # adding the element\n",
+    "\n",
+    "print(lst)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    ">> Enter number of elements : 3\n",
+    ">> element - 1 : 1\n",
+    ">> element - 2 : 2\n",
+    ">> element - 3 : 3\n",
+    ">> [1, 2, 3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Line Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 4, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lists = input(\"Enter Space separated list : \")\n",
+    "# converting the input string to list\n",
+    "lists = lists.split()\n",
+    "lists = [int(i) for i in lists]\n",
+    "lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```py\n",
+    ">> Enter Space Separated Numbers : 1 2 3\n",
+    ">> [1, 2, 3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 4, 55]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lists = [int(i) for i in input(\"Enter Space separated list : \").split()]\n",
+    "lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Indexing/Slicing of List works same as String"
    ]
   },
