--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -723,6 +723,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0], [0, 0, 0], [0, 0, 0]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GRID_SIZE =3\n",
+    "GRID = [[0 for x in range(GRID_SIZE)] for y in range(GRID_SIZE)]\n",
+    "GRID"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -730,8 +752,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multiline Input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -740,22 +769,34 @@
      "text": [
       "Enter the entries rowwise:\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1], [1, 1, 1], [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "R = int(input(\"Enter the number of rows:\"))\n",
-    "C = int(input(\"Enter the number of columns:\"))\n",
+    "LINE = int(input(\"Enter the number of rows:\"))\n",
+    "EL = int(input(\"Enter the number of columns:\"))\n",
     "\n",
     "matrix = []\n",
     "print(\"Enter the entries rowwise:\")\n",
     "\n",
     "# For user input\n",
-    "for i in range(R):\t\t # A for loop for row entries\n",
+    "for i in range(LINE):\t\t # A for loop for row entries\n",
     "\ta = []\n",
-    "\tfor j in range(C):\t # A for loop for column entries\n",
+    "\tfor j in range(EL):\t # A for loop for column entries\n",
     "\t\ta.append(int(input()))\n",
-    "\tmatrix.append(a)"
+    "\tmatrix.append(a)\n",
+    "\n",
+    "matrix"
    ]
   },
   {
@@ -780,26 +821,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 2], [3, 4]]"
+       "[[1, 1, 1], [1, 1, 1]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# one-liner logic to take input for rows and columns\n",
-    "R = 2\n",
-    "C = 2\n",
-    "mat = [[int(input()) for x in range (C)] for y in range(R)]\n",
+    "LINE = 2\n",
+    "EL = 3\n",
+    "mat = [[int(input()) for x in range (EL)] for line in range(LINE)]\n",
     "mat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Single Line Input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prerequisite: [Single Line Input](#single-line-input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GRID_SIZE = 3\n",
+    "GRID = [[int(x) for x in input().split()] for line in range(GRID_SIZE)]\n",
+    "# for each line , take space separated input and store it in a list\n",
+    "GRID"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    ">> 1 2 3\n",
+    ">> 4 5 6\n",
+    ">> 7 8 9\n",
+    ">> [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+    "```"
    ]
   },
   {
