py: lu-shu magic

--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -1798,138 +1798,88 @@
     "\n",
     "<div align=\"center\">\n",
     "<img src=\"img/phpEUzytT.png\" alt=\"phpEUzytT.png\" width=\"300px\">\n",
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "<img src=\"img/io.jpg\" alt=\"io.jpg\" width=\"500px\">\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Square is Magic and is Lo Shu\n",
-      "\n"
+      "[[2, 7, 6], [9, 5, 1], [4, 3, 8]]\n",
+      "This is a Lo Shu Magic Square.\n",
+      "And, the magic number is 15\n"
      ]
     }
    ],
    "source": [
-    "# Array dimensions\n",
-    "N = 3\n",
-    "\n",
-    "# Directions\n",
-    "HORIZONTAL = \"HORIZONTAL\"\n",
-    "VERTICAL = \"VERTICAL\"\n",
-    "DIAGONAL = \"DIAGONAL\"\n",
-    "\n",
-    "# use this array to bypass user input when testing\n",
-    "SQUARE = [[4, 9, 2],\n",
-    "          [3, 5, 7],\n",
-    "          [8, 1, 6]]\n",
+    "def findSum(n):\n",
+    "    return int(n * ((n**2) + 1) / 2)\n",
     "\n",
     "\n",
-    "# Horizontal, Vertical and Diagonal summing\n",
-    "def universal_sum(square, direction):\n",
-    "    diagonal_1 = 0\n",
-    "    diagonal_2 = 0\n",
-    "    row_sum = 0\n",
-    "    u_sum = []\n",
-    "    for x in range(N):\n",
-    "        if direction == DIAGONAL:\n",
-    "            diagonal_1 += square[x][x]\n",
-    "            diagonal_2 += square[x][N - (x + 1)]\n",
-    "        for y in range(N):\n",
-    "            if direction == HORIZONTAL:\n",
-    "                row_sum += square[x][y]\n",
-    "            elif direction == VERTICAL:\n",
-    "                row_sum += square[y][x]\n",
-    "        u_sum.append(row_sum)\n",
-    "        row_sum = 0\n",
-    "    if direction == DIAGONAL:\n",
-    "        return [diagonal_1, diagonal_2]\n",
-    "    return u_sum\n",
+    "def isSumOfEachRowMagic(grid, SUM):\n",
+    "\t# print(SUM)\n",
+    "\tfor row in grid:\n",
+    "\t\ts = sum(row)\n",
+    "\t\t# print(s)\n",
+    "\t\tif s != SUM:\n",
+    "\t\t\treturn False\n",
+    "\treturn True\n",
     "\n",
     "\n",
-    "# check if sums are equal in horizontal, vertical\n",
-    "# and diagonal arrays\n",
-    "def check_equal(iterator):\n",
-    "    return len(set(iterator)) <= 1\n",
+    "def isSumOfEachColumnMagic(grid, SUM):\n",
+    "\tfor column_no in range(len(grid[0])):\n",
+    "\t\teachColumnSum = 0\n",
+    "\t\tfor eachRow in grid:\n",
+    "\t\t\teachColumnSum += eachRow[column_no]\n",
+    "\t\tif eachColumnSum != SUM:\n",
+    "\t\t\treturn False\n",
+    "\treturn True\n",
     "\n",
     "\n",
-    "# method to find duplicates for lo shu condition\n",
-    "def find_repeat(square):\n",
-    "    seen = set()\n",
-    "    for x in range(N):\n",
-    "        for y in range(N):\n",
-    "            if square[x][y] in seen:\n",
-    "                return 0\n",
-    "            seen.add(square[x][y])\n",
-    "    return 1\n",
+    "def isSumOfLeftToRightDiagonalMagic(grid, SUM):\n",
+    "\tDiagonalSum = 0\n",
+    "\tfor row_no in range(len(grid[0])):\n",
+    "\t\tDiagonalSum += grid[row_no][row_no]\n",
+    "\tif DiagonalSum != SUM:\n",
+    "\t\treturn False\n",
+    "\treturn True\n",
     "\n",
     "\n",
-    "# lo shu checks\n",
-    "def is_lo_shu(square):\n",
-    "    for row in square:\n",
-    "        for element in row:\n",
-    "            if element >= 10:\n",
-    "                return 0\n",
-    "\n",
-    "    if sum(universal_sum(square, HORIZONTAL)) == 45:\n",
-    "        if sum(universal_sum(square, VERTICAL)) == 45:\n",
-    "            if sum(universal_sum(square, DIAGONAL)) == 30:\n",
-    "                if find_repeat(square) == 1:\n",
-    "                    return 1\n",
-    "    return 0\n",
+    "def isSumOfRightToLeftDiagonalMagic(grid, SUM):\n",
+    "\tDiagonalSum = 0\n",
+    "\tN = len(grid[0])\n",
+    "\tfor row_no in range(N):\n",
+    "\t\tDiagonalSum += grid[row_no][N-row_no-1]\n",
+    "\tif DiagonalSum != SUM:\n",
+    "\t\treturn False\n",
+    "\treturn True\n",
     "\n",
     "\n",
-    "# get user input and return 2d array\n",
-    "def getuserinput():\n",
-    "    square = []\n",
-    "    i = 1\n",
-    "    for x in range(N):\n",
-    "        row_list = []\n",
-    "        for y in range(N):\n",
-    "            print(\"Enter number\", i, \"[\", x, \"][\", y, \"]: \", end=\"\")\n",
-    "            row_list.append(int(input(), 10))\n",
-    "            i += 1\n",
-    "        square.append(row_list)\n",
-    "    return square\n",
-    "\n",
-    "\n",
-    "def check_square(square):\n",
-    "    if check_equal(universal_sum(square, HORIZONTAL)) and check_equal(universal_sum(square, VERTICAL)) and check_equal(\n",
-    "            universal_sum(square, DIAGONAL)):\n",
-    "        is_magic = 1\n",
-    "    else:\n",
-    "        is_magic = 0\n",
-    "\n",
-    "    if is_lo_shu(square):\n",
-    "        is_loshu = 1\n",
-    "    else:\n",
-    "        is_loshu = 0\n",
-    "\n",
-    "    if is_magic and is_loshu:\n",
-    "        print(\"Square is Magic and is Lo Shu\\n\")\n",
-    "        return\n",
-    "    elif is_magic and not is_loshu:\n",
-    "        print(\"Square is Magic, but not Lo Shu\\n\")\n",
-    "        return\n",
-    "    elif not is_magic:\n",
-    "        print(\"Square is not Magic\\n\")\n",
-    "        return\n",
+    "def isMagicGrid(grid, SUM):\n",
+    "\treturn isSumOfEachRowMagic(grid, SUM) and isSumOfEachColumnMagic(grid, SUM) and isSumOfLeftToRightDiagonalMagic(grid, SUM) and isSumOfRightToLeftDiagonalMagic(grid, SUM)\n",
     "\n",
     "\n",
     "def main():\n",
-    "    # while 1:\n",
-    "        # square = getuserinput()\n",
-    "        \n",
-    "        check_square(SQUARE)\n",
-    "        # repeat = input('Do you wish to enter a new square? (y/n)')\n",
-    "        # if \"n\" in repeat:\n",
-    "        #     break\n",
-    "    # print(\"Bye!\")\n",
+    "    GRID_SIZE = [int(x) for x in input(\"Please enter the desire grid dimension:\").split()]\n",
+    "    \n",
+    "    GRID = [[int(x) for x in input(\"Please enter the desired input:\").split()] for y in range(GRID_SIZE[1])]\n",
+    "    \n",
+    "    print(GRID)\n",
+    "    SUM = findSum(GRID_SIZE[0])\n",
+    "    if isMagicGrid(GRID,SUM):\n",
+    "        print(\"This is a Lo Shu Magic Square.\")\n",
+    "        print(f\"And, the magic number is {SUM}\")\n",
+    "    else:\n",
+    "        print(\"This is Not a Lo Shu Magic Square.\")\n",
     "\n",
     "\n",
     "main()\n"
