Py: 12 Unpacking Argument Lists

--- a/Py/07functions_adv/py_function.ipynb
+++ b/Py/07functions_adv/py_function.ipynb
@@ -5,7 +5,32 @@
    "metadata": {},
    "source": [
     "# Python Functions\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "cd .\\Py\\07functions_adv\\\n",
+    "jupyter nbconvert --to markdown py_function.ipynb --output README.md\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Syntax:\n",
     "```py\n",
     "    def function_name(parameters):\n",
@@ -25,13 +50,6 @@
     "4. Doc string describe what the function does. This is optional\n",
     "\n",
     "5. \"return\" statement to return a value from the function. This is optional"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Intro"
    ]
   },
   {
@@ -314,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,6 +381,75 @@
     "\tprint(kwargs)\n",
     "\n",
     "combined('a','b',22,1,2,3,x=10,y=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🚀Unpacking Argument Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reverse situation occurs when the arguments are already in a `list` or `tuple` but need to be unpacked for a function call requiring separate positional arguments. For instance, the built-in `range()` function expects separate start and stop arguments. If they are not available separately, write the function call with the `*-operator` to unpack the arguments out of a list or tuple:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5]\n",
+      "[3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(3, 6)))             # normal call with separate arguments)\n",
+    "args = [3, 6]\n",
+    "print(list(range(*args)))           # call with arguments unpacked from a list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the same fashion, `dictionaries` can deliver keyword arguments with the `**-operator`:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soikat Germany DE\n"
+     ]
+    }
+   ],
+   "source": [
+    "def info(name, country='Bangladesh', country_code='BD'):\n",
+    "\tprint(name, country, country_code)\n",
+    "\t\n",
+    "info_dic = {\n",
+    "\t'name': 'Soikat',\n",
+    "\t'country': 'Germany',\n",
+    "\t'country_code': 'DE'\n",
+    "}\n",
+    "\n",
+    "info(**info_dic)"
    ]
   },
   {
@@ -1112,10 +1199,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+   "hash": "13a64c48d63ab7fa89dd239a6172cf842d756bd82fcb4ba948a9115b41dc50a1"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1128,7 +1216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 2
  },
