--- a/Py/15tips_n_trics/tt.ipynb
+++ b/Py/15tips_n_trics/tt.ipynb
@@ -13,19 +13,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jupyter nbconvert --to markdown tt.ipynb --output README.md"
+    "\"\"\"\n",
+    "cd .\\Py\\15tips_n_trics\\\n",
+    "jupyter nbconvert --to markdown tt.ipynb --output README.md\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Passing variables number of arguments to functions"
+    "## 🚀Unpacking Argument Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reverse situation occurs when the arguments are already in a `list` or `tuple` but need to be unpacked for a function call requiring separate positional arguments. For instance, the built-in `range()` function expects separate start and stop arguments. If they are not available separately, write the function call with the `*-operator` to unpack the arguments out of a list or tuple:\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +54,42 @@
     "\n",
     "\n",
     "multipleParam(1, 2)\n",
-    "multipleParam(1, 2, 3)\n"
+    "args= [1, 2, 3]\n",
+    "multipleParam(*args)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the same fashion, `dictionaries` can deliver keyword arguments with the `**-operator`:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soikat Germany DE\n"
+     ]
+    }
+   ],
+   "source": [
+    "def info(name, country='Bangladesh', country_code='BD'):\n",
+    "\tprint(name, country, country_code)\n",
+    "\t\n",
+    "info_dic = {\n",
+    "\t'name': 'Soikat',\n",
+    "\t'country': 'Germany',\n",
+    "\t'country_code': 'DE'\n",
+    "}\n",
+    "\n",
+    "info(**info_dic)"
    ]
   },
   {
