Py: dummy notebook

--- a/Py/jupyter.ipynb
+++ b/Py/jupyter.ipynb
@@ -13,7 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jupyter nbconvert --to markdown test.ipynb --output README.md"
+    "\"\"\"\n",
+    "cd .\\Py\\\n",
+    "jupyter nbconvert --to markdown x.ipynb --output README.md\n",
+    "\"\"\"\n"
    ]
   }
  ],
