--- a/Py/07functions_adv/py_function.ipynb
+++ b/Py/07functions_adv/py_function.ipynb
@@ -17,6 +17,7 @@
     "\"\"\"\n",
     "cd .\\Py\\07functions_adv\\\n",
     "jupyter nbconvert --to markdown py_function.ipynb --output README.md\n",
+    "cd ../..\n",
     "\"\"\"\n"
    ]
   },
@@ -457,7 +458,13 @@
    "metadata": {},
    "source": [
     "## Scope and Life Time of Variables\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Scope of a variable is the portion of a program where the variable is recognized\n",
     "- variables defined inside a function is not visible from outside. Hence, they have a local scope.\n",
     "- Lifetime of a variable is the period throughout which the variable exits in the memory. \n",
@@ -467,15 +474,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is local variable\n",
-      "This is global variable\n",
+      "inside fn: This is local variable\n",
+      "inside fn: This is global variable\n",
       "This is global variable\n"
      ]
     },
@@ -486,7 +493,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-88f8916cf7d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m#print local variable local_var\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocal_var\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17224/1423070490.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m#print local variable of the function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocal_var\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'local_var' is not defined"
      ]
     }
@@ -500,9 +507,9 @@
     "    This function test the life time of a variables\n",
     "    \"\"\"\n",
     "    local_var = \"This is local variable\"\n",
-    "    print(local_var)  # print local variable local_var\n",
+    "    print(f\"inside fn: {local_var}\")  # print local variable local_var\n",
     "\n",
-    "    print(global_var)  # print global variable global_var\n",
+    "    print(f\"inside fn: {global_var}\")  # print global variable global_var\n",
     "\n",
     "\n",
     "#calling function\n",
@@ -511,8 +518,80 @@
     "#print global variable global_var\n",
     "print(global_var)\n",
     "\n",
-    "#print local variable local_var\n",
+    "#print local variable of the function\n",
     "print(local_var)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🍉Modifying Global Variable From Inside the Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = 1  # global variable\n",
+    "\n",
+    "\n",
+    "def add():\n",
+    "    c = c + 2  # increment c by 2\n",
+    "    print(c)\n",
+    "\n",
+    "\n",
+    "add()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we run the above program, the output shows an error:\n",
+    "```\n",
+    "UnboundLocalError: local variable 'c' referenced before assignment\n",
+    "```\n",
+    "This is because we can only access the global variable but cannot modify it from inside the function.\n",
+    "\n",
+    "The solution for this is to use the `global` keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside add(): 2\n",
+      "In main: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 0  # global variable\n",
+    "\n",
+    "\n",
+    "def add():\n",
+    "    global c\n",
+    "    c = c + 2  # increment by 2\n",
+    "    print(\"Inside add():\", c)\n",
+    "\n",
+    "\n",
+    "add()\n",
+    "print(\"In main:\", c)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [https://www.programiz.com/python-programming/global-keyword](https://www.programiz.com/python-programming/global-keyword)"
    ]
   },
   {
