py: list comp. v1.1

--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -1191,31 +1191,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# l = [x for x in [1,2,3]]  # [x loop(x,l)] -> SELECT x FROM l\n",
+    "l = [x for x in l] \n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 9, 16, 25, 36]\n",
-      "[1, 16, 81, 256, 625, 1296]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[102, 103, 104, 105, 106]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = [1,2,3,4,5,6]\n",
-    "# creating a new list of squares of each element\n",
-    "new_l = []\n",
-    "for el in l:\n",
-    "    new_l.append(el**2)\n",
-    "\n",
-    "print(new_l)\n",
-    "\n",
-    "# With List Comprehension:\n",
-    "\n",
-    "new_l = [el**2 for el in new_l] # [(What to Store ) for each element of list]\n",
-    "print(new_l)\n"
+    "l = [(x + 100) for x in l]  # [x_ loop(x,l)] ; x_ = modified x\n",
+    "l\n"
    ]
   },
   {
@@ -1227,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1236,24 +1259,17 @@
      "text": [
       "[2, 4, 6, 8]\n",
       "[4, 16, 36, 64]\n",
-      "[1, 4, 27, 16, 125, 36, 343, 64]\n",
-      "\n",
-      "['A', 'B', 'C']\n"
+      "[1, 4, 27, 16, 125, 36, 343, 64]\n"
      ]
     }
    ],
    "source": [
     "l =[1,2,3,4,5,6,7,8]\n",
     "# filtering even elements\n",
-    "filtered = [i for i in l if i % 2==0]\n",
+    "filtered = [i for i in l if i % 2==0] # [x loop(x,l) condition(x)] -> SELECT x FROM l WHERE condition\n",
     "print(filtered)\n",
-    "# for i in l:\n",
-    "# \tif(i%2==0):\n",
-    "# \t\tprint(i)\n",
     "\n",
-    "# (If you're familiar with SQL, you might think of this as being like a \"WHERE\" clause)\n",
-    "\n",
-    "filtered = [i**2 for i in l if i % 2 == 0]\n",
+    "filtered = [i**2 for i in l if i % 2 == 0] # [x_ loop(x,l) condition(x)]\n",
     "print(filtered)\n",
     "# new_l=[]\n",
     "# for i in l:\n",
@@ -1269,87 +1285,55 @@
     "# \tif(i%2==0):\n",
     "# \t\tnew_l.append(i**2)\n",
     "# \telse:\n",
-    "# \t\tnew_l.append(i**3)\n",
-    "\n",
-    "print()\n",
+    "# \t\tnew_l.append(i**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'B', 'C']\n"
+     ]
+    }
+   ],
+   "source": [
     "# removing empty string from the list\n",
-    "l =[\"\",\"A\",\"\",\"B\",\"\",\"C\"]\n",
+    "l = [\"\", \"A\", \"\", \"B\", \"\", \"C\"]\n",
     "removed = [i for i in l if i]\n",
-    "print(removed) \n"
+    "print(removed)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using with String"
+    "### Nested List Comprehension"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['maNgo'], ['BanAna'], ['PytHoN', 'iS', 'Love'], ['Cat', 'iS', 'not', 'doG']]\n",
-      "['maNgo', 'BanAna', 'PytHoN', 'iS', 'Love', 'Cat', 'iS', 'not', 'doG']\n",
-      "['Mango', 'Banana', 'Python', 'Is', 'Love', 'Cat', 'Is', 'Not', 'Dog']\n"
+      "[2, 4, 6, 8]\n"
      ]
     }
    ],
    "source": [
+    "selected = [4, 16, 36, 64]\n",
+    "l = [1,2,3,4,5,6,7,8]\n",
     "\n",
-    "list_string = ['maNgo', 'BanAna', 'PytHoN iS Love', 'Cat iS not doG']\n",
-    "\n",
-    "# make the list of string to list of list of words\n",
-    "list_of_list = [sentence.split() for sentence in list_string]\n",
-    "print(list_of_list)\n",
-    "\n",
-    "words = sum(list_of_list, [])  # make the list of list to a single list\n",
-    "print(words)  # print the list of word\n",
-    "\n",
-    "# modify the case\n",
-    "correct_case = [str.upper(word[0])+str.lower(word[1:]) for word in words if len(word) > 1]\n",
-    "\n",
-    "# print the list of word with desired case\n",
-    "print(correct_case)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Making Nested List Comprehension\n",
-    "\n",
-    "However, you can also use nested List comprehension. That means, you can use a list comprehension inside another list comprehension. For example, the previous example code can be written shorter using nested Python list Comprehension. Like this,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mango', 'Banana', 'Python', 'Is', 'Love', 'Cat', 'Is', 'Not', 'Dog']\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "list_string = ['maNgo', 'BanAna', 'PytHoN iS Love', 'Cat iS not doG']\n",
-    "\n",
-    "correct_case = [str.upper(word[0])+str.lower(word[1:])\n",
-    "                for word in sum([sentence.split() for sentence in list_string], [])\n",
-    "                if len(word) > 1]\n",
-    "\n",
-    "# print the list of word with desired case\n",
-    "print(correct_case)"
+    "found = [f for f in l if f**2 in selected]\n",
+    "print(found)"
    ]
   },
   {
@@ -2178,10 +2162,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+   "hash": "13a64c48d63ab7fa89dd239a6172cf842d756bd82fcb4ba948a9115b41dc50a1"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2194,7 +2179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 2
  },
